<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfigPlanta">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/fondoPlantas"
        android:scaleType="centerCrop"
        android:src="@drawable/fondo_config"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        style="@style/gradiente_reserva"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/recuadroConfigPlantas"
        style="@style/recuadro_login_registro"
        android:layout_height="450dp"
        android:layout_marginTop="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/recuadroConfigPlantas"
        app:layout_constraintEnd_toEndOf="@+id/recuadroConfigPlantas"
        app:layout_constraintStart_toStartOf="@+id/recuadroConfigPlantas"
        app:layout_constraintTop_toTopOf="@+id/recuadroConfigPlantas"
        app:layout_constraintVertical_bias="0.5">

        <com.google.android.material.textfield.TextInputLayout style="@style/campos_config_planta">

            <!--El ID del elemento va en la etiqueta de dentro-->
            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/txtNombrePlanta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/nameplan" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/campos_config_planta">

            <!--El ID del elemento va en la etiqueta de dentro-->
            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/txtNumCamasUCILibres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/numCamasUCILibres"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/campos_config_planta">

            <!--El ID del elemento va en la etiqueta de dentro-->
            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/txtNumCamasUCIOcupadas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/camas_de_uci_ocupadas"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/campos_config_planta">

            <!--El ID del elemento va en la etiqueta de dentro-->
            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/txtNumCamasPlantaLibres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/camas_de_planta_libres"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/campos_config_planta">

            <!--El ID del elemento va en la etiqueta de dentro-->
            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/txtNumCamasPlantaOcupadas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/camasPlantaOcupadas"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/campos_config_planta">

            <!--El ID del elemento va en la etiqueta de dentro-->
            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/txtNumCamasUrgenciasLibres"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/camasUrgenciasLibres"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/campos_config_planta">

            <!--El ID del elemento va en la etiqueta de dentro-->
            <com.google.android.material.textfield.TextInputEditText

                android:id="@+id/txtNumCamasUrgenciasOcupadas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/camasUrgenciasOcupadas"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btnSiguiente"
        style="@style/botones_reserva"
        android:layout_marginTop="16dp"
        android:text="@string/siguiente"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recuadroConfigPlantas"
        app:layout_constraintVertical_bias="0" />
</androidx.constraintlayout.widget.ConstraintLayout>