<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Datos">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/fondoHospital"
        android:scaleType="centerCrop"
        android:src="@drawable/fondconfig"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        style="@style/gradiente_reserva"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo_uci_sos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.053" />

    <View
        android:id="@+id/recuadroDatos"
        style="@style/recuadro_login_registro"
        android:layout_width="320dp"
        android:layout_height="300dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="1.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@+id/recuadroDatos"
        app:layout_constraintEnd_toEndOf="@id/recuadroDatos"
        app:layout_constraintStart_toStartOf="@id/recuadroDatos"
        app:layout_constraintTop_toTopOf="@+id/recuadroDatos">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/campos_login_registro"
            android:layout_height="wrap_content"
            android:textColorHint="@color/blanco"
            android:theme="@style/inputss">

            <!--El ID del elemento va en la etiqueta de dentro-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtNombreHospital"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nombre_de_hospital"
                android:textColorHint="@color/gris" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/campos_login_registro"
            android:layout_height="wrap_content"
            android:textColorHint="@color/blanco"
            android:theme="@style/inputss">

            <!--El ID del elemento va en la etiqueta de dentro-->
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txtNumPlantas"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:hint="@string/numero_de_plantas"
                android:inputType="number"
                android:textColorHint="@color/gris" />
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/btnToConfigPlantas"
            style="@style/botones_crearHospital"
            android:text="@string/siguiente" />
    </LinearLayout>

    <View
        style="@style/linea_menu_abajo"
        app:layout_constraintBottom_toTopOf="@+id/menu_abajo_reservar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/menu_abajo_reservar"
        style="@style/fondo_menu_abajo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/btnHospitalDatos"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/iconoHospitalAzul"
                android:src="@drawable/hospital_icono_azul" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hospital"

                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnReservarDatos"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="32dp"
            android:layout_marginRight="32dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/iconoReservasBlanco"
                android:src="@drawable/reserva_icono_blanco" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reserva"
                android:textSize="15sp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/btnMisCamasDatos"
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:contentDescription="@string/iconoMisCamasBlanco"
                android:src="@drawable/miscamas_icono_blanco" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/misCamas"
                android:textSize="15sp" />

        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>